// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2 MainAppBar-appBarShift-3"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        aria-label="Dropdown menu"
        className="MainAppBar-menuButton-7 MainAppBar-hide-9 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        aria-label="Homepage"
        className="MainAppBar-title-5 tour-title"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <WithStyles(Button)
        aria-label="Contact"
        className="MainAppBar-button-6 tour-contact"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(Typography)
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(Typography)>
      </WithStyles(Button)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`Main app bar component app bar renders correctly 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        aria-label="Dropdown menu"
        className="MainAppBar-menuButton-7 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        aria-label="Homepage"
        className="MainAppBar-title-5 tour-title"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <WithStyles(Button)
        aria-label="Contact"
        className="MainAppBar-button-6 tour-contact"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(Typography)
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(Typography)>
      </WithStyles(Button)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`Main app bar component does not render contact button when feature is false 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        aria-label="Dropdown menu"
        className="MainAppBar-menuButton-7 tour-nav-menu"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        aria-label="Homepage"
        className="MainAppBar-title-5 tour-title"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        aria-label="Help"
        className="MainAppBar-button-6"
        onClick={[Function]}
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(NotificationBadge)) />
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;
